# dataset-forge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_OUTPUT.md  CURRENT_STATUS.md  DIRECTION.md  LICENSE  PLUGIN_DEVELOPMENT.md  PROJECT_BIBLE.md  README.md  ROADMAP.md  WHY.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
benchmarks/: README.md  benchmark_manifest.json  real_samples_manifest.proposal.json
docs/: NON_GOALS.md  README.md  benchmark_inventory.md  deterministic_v1_frozen.md  developer-guide.md  faq.md  getting-started.md  improvement-preview-guide.md  internal_calibration_notes.md  json-schema-guide.md  philosophy.md  project_brief.md  provider-overview.md  review-desk-guide.md  spec_dataset_health_report.md  spec_lora_export_prep.md  terminology.md  troubleshooting.md  user-guide.md
presets/: anime_lineart_cleanup.json  general_ai_artifact_cleanup.json  general_artifact_cleanup.json  photoreal_cleanup.json  watercolor_pencil_cleanup.json
scripts/: _calibration_metrics.py  _crystalline_calibration_report.py  _fp_metrics.py  _live_scan_crystalline.py  _live_scan_crystalline2.py  _probe_benchmarks.py  _probe_crystalline_synthetic.py  _quick_summary.py  _severity_data.py  _severity_distribution.py  compute_metrics.py  crystalline_focus_review.txt  crystalline_fp_characterization.py  crystalline_severity_calibration.py  diagnostic_report.py  generate_benchmark_defects.py  generate_crystalline_fixtures.py  generate_texture_fixtures.py  label_ground_truth.py  pencil_grain_diagnostic.py  review_decisions.py  run_benchmarks.py  texture_threshold_calibration.py  validation_contact_sheet.py
tests/: test_analysis.py  test_analyzer_base.py  test_analyzer_caption_metadata.py  test_analyzer_crystalline.py  test_analyzer_descriptors.py  test_analyzer_duplicates.py  test_analyzer_high_frequency_isolated.py  test_analyzer_image_encoding.py  test_analyzer_oversharpening.py  test_analyzer_perceptual_duplicates.py  test_analyzer_registry.py  test_analyzer_texture.py  test_benchmark.py  test_benchmark_generator.py  test_calibration_evidence.py  test_calibration_metrics.py  test_cleanup.py  test_cli_surface.py  test_comparison.py  test_compute_metrics.py  test_context.py  test_controls.py  test_crystalline_fixtures.py  test_discovery.py  test_documentation.py  test_evidence.py  test_execute.py  test_execution_pipeline.py  test_finding.py  test_gallery.py  test_health.py  test_high_frequency_isolated_fixtures.py  test_image_primitives.py  test_improvement_plan.py  test_improvement_preview.py  test_inspect.py  test_inspect_gallery.py  test_inspection_profiles.py  test_label_ground_truth.py  test_local_classical_preview.py  (+27 more)
(+127 files in other folders)
