[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-forge"
version = "1.7.0"
description = "Dataset Forge v1.7.0 -- a read-only LoRA dataset curation workstation with provider-neutral preview contracts and capability matching, a Review Desk Improvement Preview workspace, planning-only Improvement Preview sidecars, deterministic analyzers, Dataset Intelligence, manifest-aware comparison, and local inspect, review, planning, and preview workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "Pillow>=10.0",
    "opencv-python>=4.10",
]

[project.scripts]
dataset-forge = "dataset_forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dataset_forge = ["config/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
