[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-forge"
version = "1.9.3"
description = "Dataset Forge v1.9.3 -- a deterministic, evidence-first, read-only LoRA and image dataset curation workstation with a localhost Review Desk, versioned sidecars, manifest-aware comparison, and isolated candidate preview review."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "Pillow>=10.0",
    "opencv-python>=4.10",
]

[project.scripts]
dataset-forge = "dataset_forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dataset_forge = ["config/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
